--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -77,15 +77,11 @@
     const pharmaFrame = document.getElementById("pharmaFrame");
     const bannerFrame = document.getElementById("bannerFrame");
 
-    const screens = [
-      { frame: pharmaFrame, screen: pharmaScreen, duration: 120000 },
-      { frame: bannerFrame, screen: bannerScreen, duration: 10000 }
-    ];
+    // Load initial iframe content
+    pharmaFrame.src = "Pharma_Telesales_Statistics.html?nocache=" + new Date().getTime();
+    bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
 
-    let index = 0; // currently visible screen
-    let lastCheck = null;
-
-    // --- Live clock ---
+    // Live updating clock
     function updateHeader() {
       const now = new Date();
       const formattedDate = now.toLocaleString('en-GB', {
@@ -101,47 +97,78 @@
     setInterval(updateHeader, 1000);
     updateHeader();
 
-    // --- Load iframe dynamically ---
-    function loadScreen(i) {
-      const s = screens[i];
-      s.frame.src = s.frame.src.split('?')[0] + "?nocache=" + new Date().getTime();
-      screens.forEach((scr, idx) => {
-        if(idx === i) scr.screen.classList.add("active");
-        else scr.screen.classList.remove("active");
-      });
+    // Flip cycle durations
+    const pharmaDuration = 120000; // 2 minutes
+    const bannerDuration = 10000;  // 10 seconds
+    let showingBanner = false;
+
+    function switchScreens() {
+      if (showingBanner) {
+        bannerScreen.classList.remove("active");
+        pharmaScreen.classList.add("active");
+        showingBanner = false;
+        localStorage.setItem('lastFlip_pharma', Date.now());
+        setTimeout(switchScreens, pharmaDuration);
+      } else {
+        pharmaScreen.classList.remove("active");
+        bannerScreen.classList.add("active");
+        showingBanner = true;
+        localStorage.setItem('lastFlip_pharma', Date.now());
+        setTimeout(switchScreens, bannerDuration);
+      }
     }
 
-    // --- Flip cycle ---
-    function flipCycle() {
-      index = (index + 1) % screens.length;
-      loadScreen(index);
-      setTimeout(flipCycle, screens[index].duration);
+    // Persist phase across refresh
+    const lastFlip = localStorage.getItem('lastFlip_pharma');
+    if (lastFlip) {
+      const elapsed = Date.now() - lastFlip;
+      const totalCycle = pharmaDuration + bannerDuration;
+      const modTime = elapsed % totalCycle;
+
+      if (modTime < pharmaDuration) {
+        pharmaScreen.classList.add("active");
+        bannerScreen.classList.remove("active");
+        showingBanner = false;
+        setTimeout(switchScreens, pharmaDuration - modTime);
+      } else {
+        pharmaScreen.classList.remove("active");
+        bannerScreen.classList.add("active");
+        showingBanner = true;
+        setTimeout(switchScreens, totalCycle - modTime);
+      }
+    } else {
+      pharmaScreen.classList.add("active");
+      bannerScreen.classList.remove("active");
+      showingBanner = false;
+      localStorage.setItem('lastFlip_pharma', Date.now());
+      setTimeout(switchScreens, pharmaDuration);
     }
 
-    // --- Initialize ---
-    loadScreen(index);
-    setTimeout(flipCycle, screens[index].duration);
+    // Auto-refresh mechanism for R script updates
+    let lastCheck = null;
 
-    // --- Auto-refresh on R script update ---
     async function checkForUpdate() {
       try {
         const res = await fetch("refresh_pharma.json?nocache=" + new Date().getTime());
-        if(!res.ok) return;
+        if (!res.ok) return;
         const data = await res.json();
 
-        if(lastCheck && data.timestamp !== lastCheck){
-          console.log("Detected update from R script — refreshing current iframe...");
-          loadScreen(index); // reload currently visible screen
+        if (lastCheck && data.timestamp !== lastCheck) {
+          console.log("Detected update from R script — refreshing currently visible iframe...");
+          if (showingBanner) {
+            bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
+          } else {
+            pharmaFrame.src = "Pharma_Telesales_Statistics.html?nocache=" + new Date().getTime();
+          }
         }
         lastCheck = data.timestamp;
-      } catch(e) {
+      } catch (e) {
         console.warn("Update check failed:", e);
       }
     }
 
-    setInterval(checkForUpdate, 10000); // check every 10s
+    setInterval(checkForUpdate, 1000); // check every second for near-instant update
   </script>
 
 </body>
 </html>
-
